--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ ul {
 
 /* Header */
 .header {
-    background-color: #324879;
+    background-color: #F68716;
     color: #fff;
     padding: 10px 0;
     position: fixed;
