--- a/styles.css
+++ b/styles.css
@@ -327,18 +327,16 @@ footer {
 
 .footer-container {
     display: flex;
-    justify-content: center; /* Center the footer-container */
+    justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 40px auto;
-    padding-left: 40px; /* Shift the columns to the right */
 }
 
 .footer-column {
     flex: 1;
     min-width: 250px;
-    text-align: left; /* Align links to the left */
 }
 
 .footer-column h3 {
@@ -349,7 +347,6 @@ footer {
 
 .footer-column ul {
     padding: 0;
-    list-style: none; /* Remove bullet points */
 }
 
 .footer-column ul li a {
@@ -367,8 +364,6 @@ footer p {
     margin-top: 40px;
     font-size: 14px;
 }
-
-
 /*Pages Css*/
 main {
     padding: 20px;
